src/snapshots/todoro__ui__tests__adding_several_items.snap
---
source: src/ui.rs
expression: terminal.backend()
---
"╭───────────── Monday, October 5 2026 (today) ─────────────╮"
"│1. Buy milk                                               │"
"│2. Write report                                           │"
"│3. Call                                                   │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"╰──── h ← prev day · k ↑ up · j ↓ down · next day → l ─────╯"
" INSERT   ←/→ move  enter add & next  esc done              "
