src/snapshots/todoro__ui__tests__all_items_completed.snap
---
source: src/ui.rs
expression: render(&app).backend()
---
"╭───────────── Monday, October 5 2026 (today) ─────────────╮"
"│── Completed (2) ─────────────────────────────────────────│"
"│✓  Call mom                                               │"
"│✓  Buy milk                                               │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"╰──── h ← prev day · k ↑ up · j ↓ down · next day → l ─────╯"
" NORMAL   a add  e edit  x done  d delete  ↵ notes  q quit  "
