src/snapshots/todoro__ui__tests__calendar_adding.snap
---
source: src/ui.rs
expression: terminal.backend()
---
"╭────────────────────── October 2026 ──────────────────────╮"
"│Mon     Tue     Wed     Thu      Fri     Sat     Sun      │"
"│28      29      30       1        2       3       4       │"
"│                                                          │"
"│                                                          │"
"│ 5       6       7       8        9      10      11       │"
"│Buy mi…         Dentis…          Team l…                  │"
"│+2 more         Pick u…                                   │"
"│12  ╭ Add to Monday 19 October ──────────────────────╮    │"
"│    │Renew the parking permit before it runs out at  │    │"
"│    │the end of the month                            │    │"
"│19  ╰────────────────────────────────────────────────╯    │"
"│                                                          │"
"│                                                          │"
"│26      27      28      29       30      31       1       │"
"│                                         Hallow…          │"
"│                                                          │"
"│                                                          │"
"╰───────────── h/l day · j/k week · H/L month ─────────────╯"
" ADD   enter/esc save  (empty discards)                     "
