src/snapshots/todoro__ui__tests__calendar_month.snap
---
source: src/ui.rs
expression: "render_sized(&app, 80, 30).backend()"
---
"╭──────────────────────────────── October 2026 ────────────────────────────────╮"
"│Mon        Tue        Wed        Thu        Fri        Sat        Sun         │"
"│28         29         30          1          2          3          4          │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│ 5          6          7          8          9         10         11          │"
"│Buy milk              Dentist 3…            Team lunch                        │"
"│Write the…            Pick up p…                                              │"
"│Call mom                                                                      │"
"│                                                                              │"
"│12         13         14         15         16         17         18          │"
"│                                            Pay rent                          │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│19         20         21         22         23         24         25          │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│26         27         28         29         30         31          1          │"
"│                                                       Halloween…             │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰─────────────────────── h/l day · j/k week · H/L month ───────────────────────╯"
" CALENDAR   a add  ↵ open day  w/m/y view  t today  ? help                      "
