src/snapshots/todoro__ui__tests__calendar_week.snap
---
source: src/ui.rs
expression: "render_sized(&app, 80, 24).backend()"
---
"╭──────────────────────────── 5 – 11 October 2026 ─────────────────────────────╮"
"│Mon 5 Oct (today)                                                             │"
"│   1. Buy milk                                                                │"
"│   2. Write the quarterly report                                              │"
"│   ✓ Call mom                                                                 │"
"│Tue 6 Oct                                                                     │"
"│Wed 7 Oct                                                                     │"
"│   1. Dentist 3pm                                                             │"
"│   2. Pick up parcel                                                          │"
"│Thu 8 Oct                                                                     │"
"│Fri 9 Oct                                                                     │"
"│   1. Team lunch                                                              │"
"│Sat 10 Oct                                                                    │"
"│Sun 11 Oct                                                                    │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰─────────────────────── j/k day · h/l week · H/L month ───────────────────────╯"
" CALENDAR   a add  ↵ open day  w/m/y view  t today  ? help                      "
