src/snapshots/todoro__ui__tests__calendar_year_small_scrolls_to_the_selected_month.snap
---
source: src/ui.rs
expression: "render_sized(&app, 30, 24).backend()"
---
"╭─────────── 2026 ───────────╮"
"│          November          │"
"│    Mo Tu We Th Fr Sa Su    │"
"│                       1    │"
"│     2  3  4  5  6  7  8    │"
"│     9 10 11 12 13 14 15    │"
"│    16 17 18 19 20 21 22    │"
"│    23 24 25 26 27 28 29    │"
"│    30                      │"
"│                            │"
"│          December          │"
"│    Mo Tu We Th Fr Sa Su    │"
"│        1  2  3  4  5  6    │"
"│     7  8  9 10 11 12 13    │"
"│    14 15 16 17 18 19 20    │"
"│    21 22 23 24 25 26 27    │"
"│    28 29 30 31             │"
"│                            │"
"│                            │"
"│                            │"
"│                            │"
"│                            │"
"╰──────── H/L month ─────────╯"
" CALENDAR   a add  ? help     "
