src/snapshots/todoro__ui__tests__choosing_a_deadline.snap
---
source: src/ui.rs
expression: "render_sized(&app, 80, 24).backend()"
---
"╭──────────────────────── Deadline for Overdue · 2026 ─────────────────────────╮"
"│               July                 August               September            │"
"│       Mo Tu We Th Fr Sa Su  Mo Tu We Th Fr Sa Su  Mo Tu We Th Fr Sa Su       │"
"│              1  2  3  4  5                  1  2      1  2  3  4  5  6       │"
"│        6  7  8  9 10 11 12   3  4  5  6  7  8  9   7  8  9 10 11 12 13       │"
"│       13 14 15 16 17 18 19  10 11 12 13 14 15 16  14 15 16 17 18 19 20       │"
"│       20 21 22 23 24 25 26  17 18 19 20 21 22 23  21 22 23 24 25 26 27       │"
"│       27 28 29 30 31        24 25 26 27 28 29 30  28 29 30                   │"
"│                             31                                               │"
"│                                                                              │"
"│              October              November              December             │"
"│       Mo Tu We Th Fr Sa Su  Mo Tu We Th Fr Sa Su  Mo Tu We Th Fr Sa Su       │"
"│                 1  2  3  4                     1      1  2  3  4  5  6       │"
"│        5  6  7  8  9 10 11   2  3  4  5  6  7  8   7  8  9 10 11 12 13       │"
"│       12 13 14 15 16 17 18   9 10 11 12 13 14 15  14 15 16 17 18 19 20       │"
"│       19 20 21 22 23 24 25  16 17 18 19 20 21 22  21 22 23 24 25 26 27       │"
"│       26 27 28 29 30 31     23 24 25 26 27 28 29  28 29 30 31                │"
"│                             30                                               │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰─────────────── ↵ choose day · d remove deadline · esc cancel ────────────────╯"
" DEADLINE   ↵ choose day  d remove  y/m/w view  esc cancel  ? help              "
